all canges completed except access archive

--- a/SOPManagement/Views/Home/AccessArchive.cshtml
+++ b/SOPManagement/Views/Home/AccessArchive.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Access SOP Archive";
     TempData["PageTitle"] = "Access SOP Archive";
-    TempData["SOPName"] = "N/A";
+
+    Session["SOPName"] = "N/A";
 
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
