--- a/SOPManagement/Views/Home/Index.cshtml
+++ b/SOPManagement/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    TempData["PageTitle"] = "Home Page";
 }
 
-<div class="jumbotron">
+
+<div class="jumbotron" style="margin-top:4%">
     <h2>Radiant Canada Standard Operating Procedure (SOP) Document Management</h2>
     <p class="lead">SOP is a ASP.NET web application that makes SOP management and access very easy through dashboard.</p>
     <p>It stores SOP documents in Microsoft SharePoint Online and manage changes of document through database.
