--- a/SOPManagement/Views/Home/LogIn.cshtml
+++ b/SOPManagement/Views/Home/LogIn.cshtml
@@ -1,13 +1,10 @@
 ﻿
-<div class="Content">
 
-    <div class="sopmessagebox">
+@{
 
-        <font color="red">Error:</font>Your Session has timed out. Please close web browser (with all open tabs).
-        Re-open web browser to start a new session.
+    Layout = "~/Views/Shared/_Layout.cshtml";
 
 
-    </div>
+}
 
 
-</div>
