--- a/SOPManagement/Views/Home/SOPNoAcessMsg.cshtml
+++ b/SOPManagement/Views/Home/SOPNoAcessMsg.cshtml
@@ -1,20 +1,23 @@
 ﻿
 @{
-    ViewBag.Title = "Publish SOP";
+    TempData["PageTitle"] = "Publish SOP";
 }
 
 <div class="sopmessagebox">
 
     <div style="font-size:36px;font-weight:bold">
 
-        @if (ViewBag.Title != null)
-        {
-            @ViewBag.Title
-        }
-        else
+        @if (TempData["PageTitle"] != null)
         {
             @TempData["PageTitle"]
         }
+
+        else if (Session["PageTitle"] != null)
+        {
+
+            @Session["PageTitle"]
+        }
+
 
     </div>
 
@@ -24,14 +27,14 @@
 
     <br />
 
-    @if (TempData["SOPName"] == null)
+    @if (ViewBag.SOPTitle != null)
     {
         <b> SOP Name:</b> @ViewBag.SOPTitle
     }
 
-    else
+    else if (Session["SOPName"]!=null)
     {
-        <b> SOP Name:</b> @TempData["SOPName"].ToString()
+        <b> SOP Name:</b> @Session["SOPName"].ToString()
     }
 
     <br />
