--- a/SOPManagement/Content/Site.css
+++ b/SOPManagement/Content/Site.css
@@ -103,5 +103,22 @@ th {
     border-width: 2px;
     padding: 10px;
     width: 100%;
-    margin-top: 10px
+    margin-top: 15%;
+    
 }
+
+
+.sopalertbox {
+    font-size: 18px;
+    border-style: solid;
+    border-width: 2px;
+    padding: 10px;
+    width: 30%;
+    margin-top: 10px;
+    left: 50%;
+    display: none;
+    background-color:white;
+   
+}
+
+
